samples/_failures_safe/1761085170_a54f1f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8f8b3d6.c: In function ‘main’:
./samples/SAFE/__tmp_f8f8b3d6.c:152:16: error: missing terminating " character
  152 |         printf("Compression
      |                ^~~~~~~~~~~~
./samples/SAFE/__tmp_f8f8b3d6.c:152:9: error: expected expression at end of input
  152 |         printf("Compression
      |         ^~~~~~
./samples/SAFE/__tmp_f8f8b3d6.c:152:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f8f8b3d6.c:152:9: error: expected declaration or statement at end of input
